2014-09-08 Andrew Burgess <andrew.burgess@embecosm.com>
	Fix bug in `browse-kill-ring-occur' due to change in parameters of
	`browse-kill-ring-setup'.

2014-09-07 Andrew Burgess <andrew.burgess@embecosm.com>
	Perform the quit action early, causing the `*Kill Ring*' buffer to
	close before inserting the item.  This gives a better user
	experience when the inserted item is being highlighted, previously
	the highlighting would keep the *Kill Ring* buffer around for 0.5
	second acter the user has pressed the insert key, making it appear
	that `broswse-kill-ring' was slow to respond.

2014-09-06 Andrew Burgess <andrew.burgess@embecosm.com>
	Register a `kill-buffer-hook' to ensure that the preview is
	removed even if the `*Kill Ring*' bufer is killed in an unexpected
	way, that is, by not calling `browse-kill-ring-quit' but calling
	`kill-buffer' directly.

2014-09-03 Andrew Burgess <andrew.burgess@embecosm.com>
	Disable the preview overlay before inserting the item from the
	`kill-ring', then reenable once the item has been inserted, moving
	the preview as appropriate, this ensures that when inserting
	multiple items the preview continues to be useful.

2014-09-03 Andrew Burgess <andrew.burgess@embecosm.com>
	When editing an item from the `kill-ring', if the preview is
	turned on, then update the preview live while the edit is being
	made.

2014-09-03 Andrew Burgess <andrew.burgess@embecosm.com>
	Split `browse-kill-ring-preview-update' into two functions so the
	new worker code, `browse-kill-ring-preview-update-text' can be
	reused in the next commit.  No user visible change from this.

2014-09-03 Andrew Burgess <andrew.burgess@embecosm.com>
	When deleting the last item in the *Kill Ring* buffer, also delete
	the preceding separator.

2014-09-01 Andrew Burgess <andrew.burgess@embecosm.com>
	After editing entries from the `*Kill Ring*' reselect the item in
	the `*Kill Ring*' buffer.

2014-09-01 Andrew Burgess <andrew.burgess@embecosm.com>