@@ -1,3 +1,8 @@
+2014-09-11 Andrew Burgess <andrew.burgess@embecosm.com>
+	Fix for http://bugs.debian.org/224751, inhibit all read only
+	properties before trying to delete an entry from the *Kill Ring*
+	buffer.
+
 2014-09-08 Andrew Burgess <andrew.burgess@embecosm.com>
 	Fix bug in `browse-kill-ring-occur' due to change in parameters of
 	`browse-kill-ring-setup'.
